--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cursos do Paulo</title>
 
 <style>
@@ -25,14 +26,15 @@ body{
     background: #1e293b;
     padding: 20px;
     margin: 50px auto;
-    width: 90%;       /* responsivo */
-    max-width: 400px; /* não fica gigante em desktop */
+    width: 90%;
+    max-width: 400px;
     border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.4);
 }
 
 /* Inputs */
 input{
-    width: 95%;       /* ocupa quase toda a tela no celular */
+    width: 95%;
     padding: 12px;
     margin: 8px 0;
     border: none;
@@ -75,6 +77,7 @@ button:hover{
     padding: 15px;
     border-radius: 8px;
     max-width: 400px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
 /* Títulos */
