--- a/index.html
+++ b/index.html
@@ -6,23 +6,37 @@
 <title>Cursos do Paulo</title>
 
 <style>
-/* Reset simples */
-* { box-sizing: border-box; margin: 0; padding: 0; }
-body { font-family: Arial, sans-serif; background: #0f172a; color: white; text-align: center; padding: 10px; }
-.container { background: #1e293b; padding: 20px; margin: 50px auto; width: 90%; max-width: 400px; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.4); }
-input { width: 95%; padding: 12px; margin: 8px 0; border: none; border-radius: 5px; font-size: 1em; }
-button { padding: 12px; margin: 8px 0; width: 95%; cursor: pointer; font-size: 1em; border: none; border-radius: 5px; background: #2563eb; color: white; transition: background 0.3s; }
-button:hover { background: #1e40af; }
-#msg { margin-top: 10px; font-weight: bold; }
-#cursos { margin-top: 20px; }
-.curso { background: #334155; margin: 10px auto; padding: 15px; border-radius: 8px; max-width: 400px; box-shadow: 0 0 10px rgba(0,0,0,0.3); }
-h2 { font-size: 1.8em; margin-bottom: 15px; }
-h3 { font-size: 1.4em; margin-bottom: 8px; }
-@media (max-width: 480px) {
-    h2 { font-size: 1.5em; }
-    h3 { font-size: 1.2em; }
-    input, button { font-size: 0.95em; padding: 10px; }
-    .container, .curso { margin: 30px auto; padding: 15px; }
+body{
+    font-family: Arial;
+    background:#0f172a;
+    color:white;
+    text-align:center;
+}
+
+.container{
+    background:#1e293b;
+    padding:20px;
+    margin:50px auto;
+    max-width:400px;
+    border-radius:10px;
+}
+
+input, button{
+    width:90%;
+    padding:10px;
+    margin:5px;
+}
+
+button{
+    background:#2563eb;
+    color:white;
+    border:none;
+}
+
+.curso{
+    background:#334155;
+    padding:10px;
+    margin:10px;
 }
 </style>
 </head>
@@ -30,6 +44,7 @@ h3 { font-size: 1.4em; margin-bottom: 8px; }
 <body>
 
 <div class="container" id="login">
+
 <h2>Cursos do Paulo</h2>
 
 <input id="usuario" placeholder="Usuário">
@@ -39,85 +54,76 @@ h3 { font-size: 1.4em; margin-bottom: 8px; }
 <button onclick="entrar()">Entrar</button>
 
 <p id="msg"></p>
+
 </div>
 
 <div id="cursos" style="display:none;">
+
 <h2>Cursos disponíveis</h2>
 
 <div class="curso">
-<h3>Curso de Python</h3>
-<p>Valor: R$ 50</p>
+<h3>Curso Python</h3>
 <button onclick="comprar('Python')">Comprar</button>
 </div>
 
 <div class="curso">
-<h3>Curso de HTML</h3>
-<p>Valor: R$ 30</p>
+<h3>Curso HTML</h3>
 <button onclick="comprar('HTML')">Comprar</button>
 </div>
 
 </div>
 
 <script>
-const URL = "http://localhost:3000"; // endereço do servidor Node.js
-let usuarioLogado = "";
 
-// Cadastro
-function cadastrar() {
-    let usuario = document.getElementById("usuario").value;
-    let senha = document.getElementById("senha").value;
-    let msg = document.getElementById("msg");
+async function cadastrar(){
 
-    if(usuario=="" || senha=="") { msg.innerText="Preencha tudo"; return; }
+let user = document.getElementById("usuario").value
+let pass = document.getElementById("senha").value
 
-    fetch(`${URL}/cadastrar`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ usuario, senha })
-    })
-    .then(res => res.json())
-    .then(data => { msg.innerText = data.msg; })
-    .catch(err => { console.log(err); msg.innerText="Erro no cadastro"; });
+let res = await fetch("http://localhost:3000/cadastrar",{
+method:"POST",
+headers:{"Content-Type":"application/json"},
+body:JSON.stringify({usuario:user,senha:pass})
+})
+
+let data = await res.json()
+
+document.getElementById("msg").innerText=data.msg
+
 }
 
-// Login
-function entrar() {
-    let usuario = document.getElementById("usuario").value;
-    let senha = document.getElementById("senha").value;
-    let msg = document.getElementById("msg");
+async function entrar(){
 
-    if(usuario=="" || senha=="") { msg.innerText="Preencha tudo"; return; }
+let user = document.getElementById("usuario").value
+let pass = document.getElementById("senha").value
 
-    fetch(`${URL}/login`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ usuario, senha })
-    })
-    .then(res => res.json())
-    .then(data => {
-        if(data.msg){ msg.innerText = data.msg; }
-        else {
-            usuarioLogado = data.usuario;
-            document.getElementById("login").style.display="none";
-            document.getElementById("cursos").style.display="block";
-        }
-    })
-    .catch(err => { console.log(err); msg.innerText="Erro no login"; });
+let res = await fetch("http://localhost:3000/login",{
+method:"POST",
+headers:{"Content-Type":"application/json"},
+body:JSON.stringify({usuario:user,senha:pass})
+})
+
+let data = await res.json()
+
+if(data.ok){
+
+document.getElementById("login").style.display="none"
+document.getElementById("cursos").style.display="block"
+
+}else{
+
+document.getElementById("msg").innerText=data.msg
+
 }
 
-// Comprar curso
-function comprar(curso) {
-    if(usuarioLogado == "") { alert("Faça login primeiro!"); return; }
-
-    fetch(`${URL}/comprar`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ usuario: usuarioLogado, curso })
-    })
-    .then(res => res.json())
-    .then(data => { alert(data.msg); })
-    .catch(err => { console.log(err); alert("Erro ao comprar"); });
 }
+
+function comprar(nome){
+
+alert("Compra registrada: "+nome)
+
+}
+
 </script>
 
 </body>
