--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ button{
     background:#2563eb;
     color:white;
     border:none;
+    cursor:pointer;
 }
 
 .curso{
@@ -44,7 +45,6 @@ button{
 <body>
 
 <div class="container" id="login">
-
 <h2>Cursos do Paulo</h2>
 
 <input id="usuario" placeholder="Usuário">
@@ -54,11 +54,9 @@ button{
 <button onclick="entrar()">Entrar</button>
 
 <p id="msg"></p>
-
 </div>
 
 <div id="cursos" style="display:none;">
-
 <h2>Cursos disponíveis</h2>
 
 <div class="curso">
@@ -76,53 +74,55 @@ button{
 </div>
 
 <script>
+// Função cadastrar
 async function cadastrar(){
-    let user = document.getElementById("usuario").value
-    let pass = document.getElementById("senha").value
-    let msg = document.getElementById("msg")
+    const user = document.getElementById("usuario").value
+    const pass = document.getElementById("senha").value
+    const msg = document.getElementById("msg")
 
     if(!user || !pass){
         msg.innerText = "Preencha usuário e senha"
         return
     }
 
-    try{
-        let res = await fetch("http://localhost:3000/cadastrar", {
+    try {
+        const res = await fetch("http://localhost:3000/cadastrar", {
             method: "POST",
-            headers: {"Content-Type": "application/json"},
-            body: JSON.stringify({usuario:user, senha:pass})
-        })
-        let data = await res.json()
-        msg.innerText = data.msg
-    }catch(e){
-        msg.innerText = "Erro no servidor!"
-    }
-}
-
-async function entrar(){
-    let user = document.getElementById("usuario").value
-    let pass = document.getElementById("senha").value
-    let msg = document.getElementById("msg")
-
-    try{
-        let res = await fetch("http://localhost:3000/login", {
-            method:"POST",
             headers: {"Content-Type":"application/json"},
             body: JSON.stringify({usuario:user, senha:pass})
         })
-        let data = await res.json()
-
-        if(data.ok){
-            document.getElementById("login").style.display="none"
-            document.getElementById("cursos").style.display="block"
-        }else{
-            msg.innerText = data.msg
-        }
-    }catch(e){
+        const data = await res.json()
+        msg.innerText = data.msg
+    } catch(e){
         msg.innerText = "Erro no servidor!"
     }
 }
 
+// Função login
+async function entrar(){
+    const user = document.getElementById("usuario").value
+    const pass = document.getElementById("senha").value
+    const msg = document.getElementById("msg")
+
+    try {
+        const res = await fetch("http://localhost:3000/login", {
+            method: "POST",
+            headers: {"Content-Type":"application/json"},
+            body: JSON.stringify({usuario:user, senha:pass})
+        })
+        const data = await res.json()
+        if(data.ok){
+            document.getElementById("login").style.display="none"
+            document.getElementById("cursos").style.display="block"
+        } else {
+            msg.innerText = data.msg
+        }
+    } catch(e){
+        msg.innerText = "Erro no servidor!"
+    }
+}
+
+// Função comprar
 function comprar(nome){
     alert("Compra registrada: "+nome)
 }
