--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ a{
 </div>
 
 <p>Se tiver algum problema ou dúvida, fale comigo no Instagram: 
-<a href="https://www.instagram.com/seuusuario" target="_blank">@seuusuario</a></p>
+<a href="https://www.instagram.com/Paulo_vendas_original" target="_blank">@Paulo_vendas_original</a></p>
 </div>
 
 <script>
