--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@ body{
 
 .container{
     padding:30px;
-    max-width:800px;
+    max-width:900px;
     margin:auto;
 }
 
 .produto{
     background:#1e293b;
-    padding:30px;
+    padding:35px;
     border-radius:15px;
+    box-shadow:0 0 20px rgba(0,0,0,0.5);
 }
 
 .preco-antigo{
@@ -34,97 +35,20 @@ body{
 
 .preco-novo{
     color:#22c55e;
-    font-size:35px;
+    font-size:38px;
     font-weight:bold;
 }
 
 .desconto{
     background:#ef4444;
-    padding:8px 15px;
+    padding:8px 18px;
     border-radius:8px;
     display:inline-block;
     margin-bottom:15px;
     font-weight:bold;
-}
-
-button{
-    background:#22c55e;
-    color:white;
-    border:none;
-    padding:15px 30px;
     font-size:18px;
-    border-radius:8px;
-    cursor:pointer;
-    margin-top:20px;
 }
 
-button:hover{
-    background:#16a34a;
-}
-
-ul{
-    text-align:left;
-    max-width:600px;
-    margin:auto;
-}
-a{
-    color:#38bdf8;
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-
-<h1>GUIA DEFINITIVO DO ENEM</h1>
-
-<div class="produto">
-
-<div class="desconto">🔥 50% DE DESCONTO</div>
-
-<p class="preco-antigo">De R$ 50,00</p>
-<p class="preco-novo">Por apenas R$ 25,00</p>
-
-<h3>Descrição (Versão Profissional)</h3>
-
-<p>
-Manual estratégico e direto ao ponto para aumentar sua nota no ENEM.
-Foco total em método, estratégia de prova e organização inteligente.
-</p>
-
-<h3>O que você vai aprender:</h3>
-
-<ul>
-<li>✔ Estrutura real do exame</li>
-<li>✔ Como funciona a TRI na prática</li>
-<li>✔ Técnicas para resolver questões fáceis em segundos</li>
-<li>✔ Eliminação avançada de alternativas</li>
-<li>✔ Gestão de tempo e ansiedade</li>
-<li>✔ Estratégia de redação</li>
-<li>✔ Organização de rotina por turno</li>
-<li>✔ Como analisar simulados para evoluir</li>
-</ul>
-
-<button onclick="comprar()">COMPRAR AGORA</button>
-
-</div>
-
-<p style="margin-top:30px;">
-Dúvidas? Fale comigo no Instagram:
-<br>
-<a href="https://www.instagram.com/Paulo_vendas_original" target="_blank">
-@Paulo_vendas_original
-</a>
-</p>
-
-</div>
-
-<script>
-function comprar(){
-    window.location.href = "COLE_AQUI_SEU_LINK_DA_KIWIFY";
-}
-</script>
-
-</body>
-</html>
+.topico{
+    background:#334155;
+    padding:12
