--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ body{
     background:#1e293b;
     padding:35px;
     border-radius:15px;
-    box-shadow:0 0 20px rgba(0,0,0,0.5);
 }
 
 .preco-antigo{
@@ -51,4 +50,94 @@ body{
 
 .topico{
     background:#334155;
-    padding:12
+    padding:12px;
+    margin:10px 0;
+    border-radius:8px;
+    font-weight:bold;
+}
+
+button{
+    background:#22c55e;
+    color:white;
+    border:none;
+    padding:18px 35px;
+    font-size:20px;
+    border-radius:10px;
+    cursor:pointer;
+    margin-top:25px;
+}
+
+button:hover{
+    background:#16a34a;
+}
+
+.alerta{
+    margin-top:15px;
+    font-size:14px;
+    color:#94a3b8;
+}
+
+a{
+    color:#38bdf8;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+<h1>Guia Definitivo do ENEM</h1>
+<p style="color:#94a3b8;">Página Oficial de Vendas</p>
+
+<div class="produto">
+
+<div class="desconto">50% DE DESCONTO</div>
+
+<p class="preco-antigo">De R$ 50,00</p>
+<p class="preco-novo">Por apenas R$ 25,00</p>
+
+<h3>Descrição Profissional</h3>
+
+<p>
+Manual estratégico e direto ao ponto para aumentar sua nota no ENEM.
+Foco total em método, estratégia de prova e organização inteligente.
+</p>
+
+<h3>O que você vai aprender:</h3>
+
+<div class="topico">Estrutura real do exame</div>
+<div class="topico">Como funciona a TRI na prática</div>
+<div class="topico">Técnicas para resolver questões fáceis rapidamente</div>
+<div class="topico">Eliminação avançada de alternativas</div>
+<div class="topico">Gestão de tempo e ansiedade</div>
+<div class="topico">Estratégia completa de redação</div>
+<div class="topico">Organização de rotina por turno</div>
+<div class="topico">Como analisar simulados para evoluir</div>
+
+<button onclick="comprar()">QUERO GARANTIR MEU ACESSO</button>
+
+<p class="alerta">
+Após o pagamento você receberá o guia imediatamente.
+</p>
+
+</div>
+
+<p style="margin-top:40px;">
+Dúvidas? Fale comigo no Instagram:
+<br>
+<a href="https://www.instagram.com/Paulo_vendas_original" target="_blank">
+@Paulo_vendas_original
+</a>
+</p>
+
+</div>
+
+<script>
+function comprar(){
+    window.location.href = "#";
+}
+</script>
+
+</body>
+</html>
